--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "start_url": "www.lista-tarefa-react-30.vercel.app",
     "icons": [
         {
-          "src": "assets/icon.png",
+          "src": "public/assets/icon.png",
           "sizes": "512x512",
           "type": "image/png"
         }
