--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "theme_color": "#00ffff",
     "background_color": "#ffffff",
     "display": "standalone",
-    "start_url": ".",
+    "start_url": "/",
     "icons": [
         {
           "src": "/assets/icon.png",
