--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "start_url": "/",
     "icons": [
         {
-          "src": "/assets/icon.png",
+          "src": "/public/assets/icon.png",
           "sizes": "512x512",
           "type": "image/png"
         }
